fixed horizontal scrolling

--- a/public/index.scss
+++ b/public/index.scss
@@ -5,7 +5,7 @@
 }
 $bg: #fdfffc;
 $primary: #000000;
-$secondary: #ef476f;
+$secondary: #e63946;
 *{
     padding: 0;
     margin: 0;
@@ -29,19 +29,29 @@ $secondary: #ef476f;
     -ms-overflow-style: none;
     
     
-    .landing
+    .wrapper
     {
     height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex-wrap: wrap;
     flex-direction: column;
-    width: 150vw;
+    width: 250vw;
     transform: rotate(90deg) translateY(-100vh);
     transform-origin: top left;
-    
-        .me 
+      .landing
+      {
+          width: 100vw;
+          height: 100vh;
+          display: flex;
+          justify-content: center;
+          flex-direction: column;
+          align-items: center;
+          flex-wrap: wrap;
+
+          
+        .name
         {
             text-align: left;
             align-self: flex-start;
@@ -68,9 +78,26 @@ $secondary: #ef476f;
         }
         .moon 
         {
-            width: 30%;
-            margin-left: -50%;
+            width: 41vw;
+            justify-self: flex-end;
+            position: absolute;
+            left: 100-41vw;
+          
         }
+
+      }.about
+      {
+          background: #000;
+          height: 100vh;
+          width: 100vw;
+          color: white;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+         
+
+      }
+       
     }
    
     
@@ -81,10 +108,14 @@ $secondary: #ef476f;
         transform: none;
         width: auto;
         height: 100vh;
-        .landing{
-            height: 100vh;
+        .wrapper
+        { height: 100vh;
             transform: none;
-            .me{
+
+        
+        .landing{
+            
+            .name{
                 width: 100vw;
                 font-size: 1.5em;
                 &:first-letter
@@ -103,7 +134,7 @@ $secondary: #ef476f;
             }
             
         }
-    }
+    }}
 }
 ::-webkit-scrollbar {
     background: $bg;
@@ -117,7 +148,3 @@ $secondary: #ef476f;
 
                
   }
- 
-  
-  
-  
